# dev-containers-suburi

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
poetry_suburi/: main.py
tests/: test_main.py
