[tool.poetry]
name = "poetry-suburi"
version = "0.1.0"
description = ""
authors = ["TomoShiozawa <18281856+TomoShiozawa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
